@@ -7,6 +7,7 @@ openstack-trove (1:5.0.0~rc1-3) UNRELEASED; urgency=medium
   * Sets Neutron as network manager by default, and not nova-network.
   * Move all config files handling within trove-common.
   * Move all logrotate stuff within trove-common.logrotate.
+  * Write db and rabbit info in all needed config files.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 30 Mar 2016 10:25:54 +0200
 
